-- zad 30 reverse and write to file